--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ wght@0,100;0,300;0,400;0,500; 0,700;0,900; 1,100; 1,300;1,400;1,500;
       <li><a href="about.html">About</a></li>
       <li><a href="membership.html">Membership</a></li>
       <li><a href="events.html">Events</a></li>
-      <li><a href="contact.html">Contact US</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
     </ul>
     <div class="right-content">
       <a href="https://www.starbucks.in/profile" target="_blank" class="nav-btn">Sign In</a>
